--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -9,7 +9,7 @@
 	<h1>Turn Your Tables</h1>
 	<p id="slogan">Whether for 2 or 10 &mdash; let us design your perfect meal.</p>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<p>Give us your taste preferences, dietary needs, and event details. We'll whip up the perfect menu for you.</p>
+	<p>Give us your taste preferences, dietary needs, and event details. And we'll whip up the perfect menu for you.</p>
 	<ul>
 		<li>Fancy wine dinner parties.</li>
 		<li>Weekly family get-togethers.</li>
