Started on the final version

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 	<div class="wrapper">
-		<header>
+		<header id="index">
 			<br><br>
 			<h1>Turn Your Tables</h1>
 			<p id="slogan">Whether for 2 or 20 &mdash; let us design your perfect meal.</p>
 		</header>
 		<nav class="clearfix">
 			<ul id="nav">
-    			<li><a href="#meal">Done meals</a></li>
-    			<li><a href="#deal">Our deals</a></li>
-    			<li><a href="#real">Make it real</a></li>
+    			<li><a href="meals.html">done meals</a></li>
+    			<li><a href="deals.html">our deals</a></li>
+    			<li><a href="real.html">make it real</a></li>
     		</ul>
     	</nav>
 		<section id="one" class="clearfix">
@@ -33,7 +33,7 @@
 					<p>Check out our done meals or our deals before making it real.</p>
 				</article>
 				<aside id="right">
-					<h2>Testimonials</h2>
+					<h2 class="aside">Testimonials</h2>
 					<p class="testimonial_quote">The food was great! I've only eaten and enjoyed cereal, but my life has changed.</p>
 					<p class="testimonial_person">&mdash; Tony the Tiger</p>
 					<br>
