--- a/final_project/real.html
+++ b/final_project/real.html
@@ -20,6 +20,18 @@
     			<li><a href="deals.html">our deals</a></li>
     		</ul>
     	</nav>
+		<section id="one">
+			<section id="two_column">
+				<article class="form">
+				</article>
+				<article class="form">
+				</article>
+				<article class="form">
+				</article>
+				<article class="form">
+				</article>
+			</section>
+		</section>
 	</div>
 </body>
 </html>
