--- a/final_project/meals.html
+++ b/final_project/meals.html
@@ -20,6 +20,26 @@
     			<li><a href="real.html">make it real</a></li>
     		</ul>
     	</nav>
+		<section id="one" class="clearfix">
+			<section id="two_column" class="clearfix">
+				<article class="details_left">
+				</article>
+				<article class="details_right">
+				</article>
+				<article class="details_left">
+				</article>
+				<article class="details_right">
+				</article>
+				<article class="details_left">
+				</article>
+				<article class="details_right">
+				</article>
+				<article class="details_left">
+				</article>
+				<article class="details_right">
+				</article>
+			</section>
+		</section>
 	</div>
 </body>
 </html>
